--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
      padding: 250px 10px 100px 10px;
      font-weight: bold;
      font-variant: small-caps;
+     text-decoration: none;
  }
  
  
@@ -19,7 +20,11 @@ body {
 }
 
 
-
+h3{
+    font-family: 'Nosifer',cursive;
+    text-decoration: none;
+    font-weight: bolder;
+}
 
 .footer {
           padding-top: 30px;
