--- a/style1.css
+++ b/style1.css
@@ -31,10 +31,20 @@ footer {
   width:100%;  
   height: auto;
 }
+h2{
+    font-family: 'Nosifer',cursive;
+    text-decoration: none;
+    padding: 10px;
+    font-size: 20px;
+    font-weight: bolder;
+}
 
 h3{
     font-family: 'Germania One',cursive;
     color:blue;
+    text-decoration:none;
+    text-transform: uppercase;
+    text-shadow: inherit;
 }
 p{
   font-family: 'Germania One',cursive;
