--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body {
      text-decoration: none;
  }
  
+ .navbar-default {
+   background-color:lightblue;
+    border-color: #E7E7E7;
+}
  
  
  .nav{
@@ -24,6 +28,7 @@ h3{
     font-family: 'Nosifer',cursive;
     text-decoration: none;
     font-weight: bolder;
+    color: black;
 }
 
 .footer {
