--- a/style1.css
+++ b/style1.css
@@ -59,7 +59,7 @@ h2{
 
 h3{
     font-family: 'Germania One',cursive;
-    color:black;
+    color:white;
     text-decoration:none;
     text-transform: uppercase;
     text-shadow: inherit;
