--- a/style2.css
+++ b/style2.css
@@ -31,12 +31,19 @@ h3{
     font-family: 'Germania One',cursive;
     color:white ;
     text-decoration:none;
-    text-transform: uppercase;
+    text-transform:uppercase;
+    text-shadow: inherit;
+}
+
+h5{
+    font-family:'Germania One',cursive;
+    color:black;
+    text-decoration:none;
     text-shadow: inherit;
 }
 
 footer {
-          padding-top: 30px;
+          padding-top:30px;
           text-align:center;
           height:100px;
 }
@@ -44,10 +51,7 @@ footer {
    background-color:#539BD6;
     border-color: #E7E7E7;
 }
-.container{
-    padding: 30px;
-    margin:10px;
-}
+
 .navbar-default .navbar-brand {
     color: #777;
 }
@@ -55,4 +59,10 @@ footer {
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
     color: #333;
+}
+p{
+  font-family:Roboto;
+  font-size: 20px;
+  font-weight: bold;
+  font-variant:inherit;
 }
