--- a/css/style1.css
+++ b/css/style1.css
@@ -1,62 +1,23 @@
 
 body{
-   background-color:lighblue;
-   padding-top: 70px;
+    background-color:#ffffff;
 }
 
-.logo{
-     font-family: 'Monoton',cursive;
-     font-size: 100px;
-     padding: 250px 10px 100px 10px;
-     font-weight: bold;
-     font-variant: small-caps;
- }
- 
-
- .nav{
-  font-family: 'Germania One',cursive;  
-  
-}
-.navbar-default {
-   background-color:#539BD6;
-    border-color: #E7E7E7;
-}
-
-.navbar-default .navbar-brand {
-    color: #777;
-}
-
-.navbar-default .navbar-nav > li > a:hover,
-.navbar-default .navbar-nav > li > a:focus {
-    color: #333;
-}
-
-footer {
-          padding-top: 5px;
-          text-align: center;
-          height: 100px;
-}
-
-.img{
-  width:100%;  
-  height: auto;
-}
 h2{
-    font-family: 'Nosifer',cursive;
+    font-family: 'Roboto';
     text-decoration: none;
-    padding: 10px;
-    font-size: 20px;
-    font-weight: bolder;
-    
 }
-
+h1{
+  font-family: 'Germania One',cursive;
+  font-color: white;
+}
 h3{
     font-family: 'Germania One',cursive;
-    color:white;
-    text-decoration:none;
+    text-decoration:none !important;
     text-transform: uppercase;
     text-shadow: inherit;
 }
+
 p{
   font-family:Roboto;
   font-size: 20px;
@@ -66,8 +27,9 @@ p{
 }
 
 .box {
-    margin-right: 10px;
-    padding-top: 10px;
+    margin-right: 1px;
+    padding-top: 1px;
+    display: inline;
 }
 
 h4 {
@@ -78,14 +40,155 @@ h4 {
     text-shadow: inherit;
 }
 
-.nounderline {
-    text-decoration: none !important;
 
-      }
-      
-h6 {
-    font-family: 'Germania One',cursive;
-    font-size: 20px;
-    text-decoration: none;
-    text-shadow: inherit;
+input[type="name"]
+{
+    background-color: #3379b7;
 }
+
+
+input[type="email"]
+{
+    background-color: #3379b7;
+}
+
+
+#textarea
+{
+    background-color: #3379b7;
+}
+
+footer {
+          padding-top: 5px;
+          text-align: center;
+          height: 100px;
+}
+
+   nav {
+			font-family: roboto;
+			background-color:#3379b7;
+			margin: 30px auto;
+			width: 100%;
+			height: 500px;
+			display: flex;
+			flex-direction:column;
+			align-items:stretch;
+			border-radius: 20px;
+			padding: 0;	
+			
+		}
+				
+a{
+			text-decoration: none;
+			color: black;
+			flex:1;
+			height: 30px;
+			font-family: Dosis;
+			padding:20px 20px 20px 20px;
+			text-align: center;
+			font-size: 2em;
+			font-color:white;
+			/*border:1px solid white;*/
+
+		}
+			#logoNav{
+			font-size: 2em;
+			font-weight: bold;
+			}
+
+
+
+body { padding-bottom: 70px; }
+
+
+
+
+.logo{
+     font-family:'Nosifer';
+     font-size: 10px;
+     position: fixed;
+     text-align: center;
+     font-weight: bold;
+     float: center;
+ }
+ 
+ img {
+    width: 100%;
+    height: auto;
+}
+ 
+video {
+    width: 100%;
+    height: auto;
+}
+
+.thumbnail {
+    position: relative;
+    padding: 0px;
+    margin-bottom: 10px;
+}
+
+.thumbnail img {
+    width: 100%;
+}
+
+.trending {
+    background-color:#3379b7;
+    font-color:white;
+}
+
+.footer {
+  background-color:#3379b7;
+  position: absolute;
+  padding: 1rem;
+  height:100px;
+  width:100%;
+  text-align: center;
+}
+ 
+ 
+ .icon{
+     font-size: 10px;
+ }
+ 
+ .btn
+ {
+     text-align: center;
+ }
+
+@media screen and (min-width: 350px) and (max-width: 700px) {
+    .icon {
+        font-size: 20px;
+    }
+}
+ 
+@media screen and (min-width: 700px)
+		{
+	nav{
+			flex:1;
+			flex-direction:row;
+			border: 1px 0 0;
+			font-size:1em;
+			height:200px;
+			}
+			
+	a{
+             flex-direction:row-reverse;
+            justify-content:flex-end;
+            margin-top:20px;
+            padding:0;
+			}
+			
+ .trending {
+    background-color:#3379b7;
+    font-color:white;
+}
+
+.icon{
+     font-size: 40px;
+     
+ }
+ 
+ 
+
+
