--- a/css/style1.css
+++ b/css/style1.css
@@ -1,118 +1,95 @@
 
 body{
-    background-color:#ffffff;
+    padding-top:250px; 
 }
 
+
 h2{
-    font-family: 'Roboto';
-    text-decoration: none;
+    font-family:'Roboto';
+    text-decoration:none;
 }
+
+
 h1{
-  font-family: 'Germania One',cursive;
+  font-family:'Germania One',cursive;
   font-color: white;
 }
+
+
 h3{
-    font-family: 'Germania One',cursive;
+    font-family:'Germania One',cursive;
     text-decoration:none !important;
     text-transform: uppercase;
     text-shadow: inherit;
 }
 
+
 p{
   font-family:Roboto;
-  font-size: 20px;
-  
+  font-size:20px;
   font-variant:inherit;
-  text-decoration: none;
+  text-decoration:none;
 }
 
-.box {
+
+.box{
     margin-right: 1px;
     padding-top: 1px;
-    display: inline;
+    /*display: inline;*/
 }
 
-h4 {
-    font-family: 'Germania One',cursive;
+
+h4{
+    font-family:'Germania One',cursive;
     color:blue;
     text-decoration: none;
     text-transform: uppercase;
     text-shadow: inherit;
 }
 
-
 input[type="name"]
 {
-    background-color: #3379b7;
+background-color: #3379b7;
 }
 
 
 input[type="email"]
 {
-    background-color: #3379b7;
+background-color: #3379b7;
 }
 
 
 #textarea
 {
-    background-color: #3379b7;
+background-color: #3379b7;
 }
 
-footer {
-          padding-top: 5px;
-          text-align: center;
-          height: 100px;
-}
+/*footer {*/
+/*      padding-top: 50px;*/
+/*      padding-bottom: 50px;*/
+/*      text-align: center;*/
+/*      height: 100px;*/
+/*}*/
 
-   nav {
-			font-family: roboto;
-			background-color:#3379b7;
-			margin: 30px auto;
-			width: 100%;
-			height: 500px;
-			display: flex;
-			flex-direction:column;
-			align-items:stretch;
-			border-radius: 20px;
-			padding: 0;	
-			
-		}
-				
-a{
-			text-decoration: none;
-			color: black;
-			flex:1;
-			height: 30px;
-			font-family: Dosis;
-			padding:20px 20px 20px 20px;
-			text-align: center;
-			font-size: 2em;
-			font-color:white;
-			/*border:1px solid white;*/
-
-		}
-			#logoNav{
-			font-size: 2em;
-			font-weight: bold;
-			}
-
-
-
-body { padding-bottom: 70px; }
-
-
-
-
-.logo{
-     font-family:'Nosifer';
-     font-size: 10px;
-     position: fixed;
-     text-align: center;
-     font-weight: bold;
-     float: center;
- }
+ .navbar {
+  /*overflow: hidden;*/
+  padding-top:70px;
+  position: fixed;
+  width: 100%;
+  background-color: #3379b7;
  
- img {
+}
+
+.navbar a {
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  
+}
+
+ 
+img {
     width: 100%;
     height: auto;
 }
@@ -123,7 +100,6 @@ video {
 }
 
 .thumbnail {
-    position: relative;
     padding: 0px;
     margin-bottom: 10px;
 }
@@ -139,56 +115,50 @@ video {
 
 .footer {
   background-color:#3379b7;
-  position: absolute;
   padding: 1rem;
-  height:100px;
+  height:50px;
   width:100%;
   text-align: center;
 }
  
  
- .icon{
+.icon{
      font-size: 10px;
  }
  
- .btn
+.btn
  {
-     text-align: center;
+text-align: center;
  }
 
-@media screen and (min-width: 350px) and (max-width: 700px) {
-    .icon {
-        font-size: 20px;
-    }
-}
- 
-@media screen and (min-width: 700px)
-		{
-	nav{
-			flex:1;
-			flex-direction:row;
-			border: 1px 0 0;
-			font-size:1em;
-			height:200px;
-			}
-			
-	a{
-             flex-direction:row-reverse;
-            justify-content:flex-end;
-            margin-top:20px;
-            padding:0;
-			}
-			
- .trending {
-    background-color:#3379b7;
-    font-color:white;
+/*=====================media================ */
+
+
+@media(min-width:768px) {
+  
+    
+/*body {*/
+/*    padding-top: 50px;*/
+/*}*/
+
+
 }
 
-.icon{
-     font-size: 40px;
-     
- }
- 
- 
+@media(min-width:992px){
+  
+    
+/*body {*/
+/*    padding-top: 50px;*/
+/*}*/
 
 
+}
+@media(min-width:1200px){
+  
+
+    
+/*body {*/
+/*    padding-top: 50px;*/
+/*}*/
+
+}
